--- a/css/character.css
+++ b/css/character.css
@@ -1,4 +1,16 @@
-.character{
+
+.characters{
+display: grid;
+grid-template-columns: repeat(3,1fr);
+gap: 15px;
+}
+
+main div{
 
     background-color: rgb(99, 99, 99);
+  }
+
+  main div img{
+width: 100%;
+
   }
