--- a/css/style.css
+++ b/css/style.css
@@ -51,4 +51,41 @@ body {
     bottom: 0;
   }
 
- 
+   section.characters {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 15px;
+    /* background-color: rgb(0, 0, 0); */
+    color: white;
+    }
+    
+    section.characters div.character{
+      background-color: rgb(79, 79, 79);
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+
+    section.characters img{
+      /* height: ; */
+        width: 50%;
+    }
+    
+
+    section.characters div.character div.character-title{
+      background-color: aquamarine;
+      color: red;
+      text-align: center;
+    }
+    section.characters div.character div.character-title h2{
+      font-size: 40px;
+    }
+    section.characters div.character div.character-title h3{
+      font-size: 20px;
+      font-weight: lighter;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+      
