--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
   main {
     padding: 2em;
     text-align: center;
+    background-color: black;
   }
   
   .intro {
@@ -52,11 +53,13 @@ body {
   }
 
    section.characters {
+    min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 15px;
     /* background-color: rgb(0, 0, 0); */
     color: white;
+   
     }
     
     section.characters div.character{
@@ -75,20 +78,32 @@ body {
     }
     
 
-    section.characters div.character div.character-title{
+    section.characters div.character div.character-title div.character-profile{
       /* background-color: aquamarine; */
       /* color: red; */
       /* text-align: center; */
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: baseline;
     }
+
+    
+
     section.characters div.character div.character-title h2{
       font-size: 40px;
     }
     section.characters div.character div.character-title h3{
-      font-size: 20px;
+      font-size: 25px;
       font-weight: lighter;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      text-align: left;
+      display: inline;
+      color: aqua;
+
     }
-      h3{
-        text-align: left;
+    section.characters  p {
+        display: inline;
+        font-size: 20px;
+        margin-left: 10px;
       }
