--- a/css/style.css
+++ b/css/style.css
@@ -32,16 +32,27 @@ body {
     padding: 2em;
     text-align: center;
     background-color: black;
+    color: white;
   }
   
   .intro {
-    max-width: 900px;
+    /* max-width: 900px; */
     margin: 0 auto;
+    background-image: url(../assets/image/dining-room-5114247_1920.jpg);
+min-height: 100vh;
+display: flex;
+flex-direction: column;
+justify-content: baseline;
+align-content: baseline;
   }
   .intro h1{
-    font-size: 70px;
+    font-size: 80px;
   }
-
+  .intro p{
+    font-size: 35px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.444);
+  }
   footer {
     background-color: #343a40;
     color: white;
@@ -51,6 +62,11 @@ body {
     width: 100%;
     bottom: 0;
   }
+section.intro{
+
+}
+
+
 
    section.characters {
     /* min-height: 10vh; */
@@ -72,12 +88,30 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: transform 0.3s ease;
-
+    transition: transform 0.2s ease;
+cursor: pointer;
+view-timeline: --container;
+    view-timeline-axis: block;
+ animation-timeline: --container;
+animation-name: show;
+animation-range: entry 25% cover 50%;
+animation-fill-mode: both;
     }
+    @keyframes show {
+      0% {
+          opacity: 0;
+          scale: 25%
+      }
+  
+      to {
+          opacity: 1;
+          scale: 100%
+      }
+  }
+
 section.characters .character:hover{
 border: 1px solid white;
-transform: scale(1.1);
+/* transform: scale(1.1); */
 
 }
     
