--- a/css/style.css
+++ b/css/style.css
@@ -1,172 +1,225 @@
 body {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  header {
-    background-color: #343a40;
-    color: white;
-    padding: 1em 0;
-  }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    font-size: 20px;
-  }
-  
-  nav ul li {
-    margin: 0 1em;
-  }
-  
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  main {
-    padding: 2em;
-    text-align: center;
-    background-color: black;
-    color: white;
-  }
-  
-  .intro {
-    /* max-width: 900px; */
-    margin: 0 auto;
-    background-image: url(../assets/image/dining-room-5114247_1920.jpg);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  background-color: #343a40;
+  color: white;
+  padding: 1em 0;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  font-size: 20px;
+}
+
+nav ul li {
+  margin: 0 1em;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+main {
+  padding: 2em;
+  text-align: center;
+  background-color: black;
+  color: white;
+}
+
+
+.intro {
+  /* max-width: 900px; */
+  margin: 0 auto;
+  background-image: url(../assets/image/dining-room-5114247_1920.jpg);
 min-height: 100vh;
 display: flex;
 flex-direction: column;
 justify-content: baseline;
 align-content: baseline;
-  }
-  .intro h1{
-    font-size: 80px;
-  }
-  .intro p{
-    font-size: 35px;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.444);
-  }
-  footer {
-    background-color: #343a40;
-    color: white;
-    text-align: center;
-    padding: 1em 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-  }
-section.intro{
+}
+.intro h1{
+  font-size: 80px;
+}
+.intro p{
+  font-size: 35px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.444);
+}
+footer {
+  background-color: #343a40;
+  color: white;
+  text-align: center;
+  padding: 1em 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+/* section.intro{
 
+} */
+
+section.galery{
+  /* min-height: 100vh; */
+  /* background-color: aqua; */
+    /* display: flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content: center; */
+      padding: 10px 0px;
+      margin-bottom: 20px;
+      background-image: url(../assets/image/fondo1.jpg);
+background-size: cover;
+    }
+ .galery-card{
+  display: flex;
+  align-items: center;
+  justify-content: center; */
+  /* flex-direction: column; */
+ }
+
+.title-galery{
+  display: flex;
+  flex-direction: column;
+font-size: 60px;
+font-style: italic;
+}    
+    
+section.galery  img{
+  height: 200px;
+}
+section.galery h3{
+font-size: 30px;
+/* color: aquamarine; */
 }
 
+.card-film, .card-book,.card-characters{
+    width: 10%;
+    padding:30px ;
+    margin: 20px ;
+    background-color: rgba(0, 0, 0, 0.166);
+    border: 1px solid gray;
+    border-radius: 40px;
+cursor: pointer;
+transition: transform 0.5s ease;
+font-style: italic;
+}
+.card-film img, .card-book img,.card-characters img{
+  width: 100%;
+  border-radius: 40px;
+}
+.card-film:hover, .card-book:hover,.card-characters:hover{
+border:1px solid white;
+transform: scale(1.1);
 
+}
+ section.characters {
+  /* min-height: 10vh; */
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 15px;
+  /* background-color: rgb(0, 0, 0); */
+  color: white;
+ 
+  }
+  
 
-   section.characters {
-    /* min-height: 10vh; */
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 15px;
-    /* background-color: rgb(0, 0, 0); */
-    color: white;
-   
-    }
-    
-
-    
-    section.characters div.character{
-      background-color: rgb(79, 79, 79);
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.2s ease;
+  
+  section.characters div.character{
+    background-color: rgb(79, 79, 79);
+  border-radius: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.2s ease;
 cursor: pointer;
 view-timeline: --container;
-    view-timeline-axis: block;
- animation-timeline: --container;
+  view-timeline-axis: block;
+animation-timeline: --container;
 animation-name: show;
 animation-range: entry 25% cover 50%;
 animation-fill-mode: both;
-    }
-    @keyframes show {
-      0% {
-          opacity: 0;
-          scale: 25%
-      }
-  
-      to {
-          opacity: 1;
-          scale: 100%
-      }
   }
+  @keyframes show {
+    0% {
+        opacity: 0;
+        scale: 25%
+    }
+
+    to {
+        opacity: 1;
+        scale: 100%
+    }
+}
 
 section.characters .character:hover{
 border: 1px solid white;
 /* transform: scale(1.1); */
 
 }
-    
-    section.characters div.character div.character-img{
+  
+  section.characters div.character div.character-img{
+    width: 50%;
+  }
+
+  section.characters img{
+    /* height: ; */
       width: 50%;
-    }
+  }
+  
 
-    section.characters img{
-      /* height: ; */
-        width: 50%;
-    }
-    
+  section.characters div.character div.character-title div.character-profile{
+    /* background-color: aquamarine; */
+    /* color: red; */
+    /* text-align: center; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+  }
 
-    section.characters div.character div.character-title div.character-profile{
-      /* background-color: aquamarine; */
-      /* color: red; */
-      /* text-align: center; */
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: baseline;
-    }
+  
 
-    
+  section.characters div.character div.character-title h2{
+    font-size: 40px;
+  }
+  section.characters div.character div.character-title h3{
+    font-size: 25px;
+    font-weight: lighter;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: left;
+    display: inline;
+    color: aqua;
 
-    section.characters div.character div.character-title h2{
-      font-size: 40px;
-    }
-    section.characters div.character div.character-title h3{
-      font-size: 25px;
-      font-weight: lighter;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      text-align: left;
+  }
+  section.characters  p {
       display: inline;
-      color: aqua;
-
+      font-size: 20px;
+      margin-left: 10px;
     }
-    section.characters  p {
-        display: inline;
-        font-size: 20px;
-        margin-left: 10px;
-      }
 
 section.buscador{
 margin: 20px 0px;
 
 }    
 section.buscador h2{
-  font-size: 35px;
-  color: white;
-  
+font-size: 35px;
+color: white;
+
 }
 
 section.buscador input{
-  padding: 10px 20px;
-  border-radius: 10px;
-  
+padding: 15px 40px;
+border-radius: 10px;
+
 }
