--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --text-light: white;
   --text-dark: black;
   --highlight: rgba(0, 0, 0, 0.166);
-  --border-gray: gray;
+  --border-gray: rgb(255, 225, 0);
   --border-hover: white;
   --font-impact: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   --font-secondary: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -266,29 +266,32 @@ ol li:hover {
 }
 
 /* Characters Section */
-.characters {
+section.characters {
+  /* min-height: 10vh; */
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3,1fr);
   gap: 15px;
-  color: var(--text-light);
-}
+  /* background-color: rgb(0, 0, 0); */
+  color: white;
+ 
+  }
+  .character-link {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+        text-decoration: none;
+    color: inherit;
+  }
 
-.character-link {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  text-decoration: none;
-  color: inherit;
-}
+  .character-img{
+    width: 100%;
+  }
 
-.character-img {
-  width: 100%;
-}
 
-.characters .character {
-  background-color: rgb(79, 79, 79);
+  section.characters div.character{
+    background-color: rgb(79, 79, 79);
   border-radius: 10px;
   padding: 10px;
   display: flex;
@@ -296,52 +299,68 @@ ol li:hover {
   justify-content: center;
   align-items: center;
   transition: transform 0.2s ease;
-  cursor: pointer;
-}
-
-@keyframes show {
-  0% {
-    opacity: 0;
-    transform: scale(0.25);
+cursor: pointer;
+view-timeline: --container;
+  view-timeline-axis: block;
+animation-timeline: --container;
+animation-name: show;
+animation-range: entry 25% cover 50%;
+animation-fill-mode: both;
   }
-  100% {
-    opacity: 1;
-    transform: scale(1);
+  @keyframes show {
+    0% {
+        opacity: 0;
+        scale: 25%
+    }
+
+    to {
+        opacity: 1;
+        scale: 100%
+    }
+}
+
+section.characters .character:hover{
+border: 1px solid white;
+/* transform: scale(1.1); */
+
+}
+  
+  section.characters div.character div.character-img{
+    width: 50%;
   }
-}
 
-.characters .character {
-  animation: show 0.5s ease both;
-}
+  section.characters img{
+    /* height: ; */
+      width: 50%;
+  }
+  
 
-.characters .character:hover {
-  border: 1px solid var(--border-hover);
-}
+  section.characters div.character div.character-title div.character-profile{
+       width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+  }
 
-.characters .character-title {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
-}
+  
 
-.characters .character-title h2 {
-  font-size: 40px;
-}
+  section.characters div.character div.character-title h2{
+    font-size: 40px;
+  }
+  section.characters div.character div.character-title h3{
+    font-size: 25px;
+    font-weight: lighter;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: left;
+    display: inline;
+    color: aqua;
 
-.characters .character-title h3 {
-  font-size: 25px;
-  font-weight: lighter;
-  font-family: var(--font-secondary);
-  text-align: left;
-  color: aqua;
-}
-
-.characters p {
-  display: inline;
-  font-size: 20px;
-  margin-left: 10px;
-}
+  }
+  section.characters  p {
+      display: inline;
+      font-size: 20px;
+      margin-left: 10px;
+    }
 
 /* Search Section */
 .buscador {
@@ -359,7 +378,7 @@ ol li:hover {
 }
 
 /*Respon tablet*/
-@media (max-width:880px) {
+@media (max-width:940px) {
   .intro p {font-size: 25px;}
   table, thead, tbody, th, td, tr {
     display: block;
@@ -395,12 +414,18 @@ ol li:hover {
   tr a{text-decoration: underline;}
   tr:hover{
     background-color: #575757;
-    
+      }
+      section.characters{
+  grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media (max-width:480px) {
+@media (max-width:660px) {
   .list{
        flex-direction: column;
   }
+  section.characters{
+    grid-template-columns: repeat(1, 1fr);
+    }
+
 }
