--- a/css/style.css
+++ b/css/style.css
@@ -418,6 +418,11 @@ border: 1px solid white;
       section.characters{
   grid-template-columns: repeat(2, 1fr);
   }
+  section.galery .separator{
+    
+    top:285px;
+    width: 100px%;
+  }
 }
 
 @media (max-width:660px) {
@@ -446,4 +451,20 @@ main{
   padding: 5px;
 }
 .card{ width: 100%;}
+section.galery .separator{
+  width: 100px;
+}
+}
+
+/*separador*/
+section.galery{
+  position: relative;
+}
+.separator{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top:285px;
+  width: 100%;
 }
