--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 
 /* Global Styles */
 body {
+  
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -470,15 +471,17 @@ section.galery{
 }
 
 /*paricles-js*/
-#menu {
+header{
   z-index: 1;
+  position: relative;
 }
 #particles-js{
-  background-color: rgba(0, 0, 0, 0); /* Color de fondo */
   position: absolute;
-  width: 100%;
+  background-color: rgba(0, 0, 0, 0); /* Color de fondo */
+   width: 100%;
   height: 100%;
   top: 0px;
   left: 0px;
-  z-index: 1; /* Asegura que esté detrás de otros elementos */
+  z-index: 0;
+   /* Asegura que esté detrás de otros elementos */
 }
