--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@ header{
   z-index: 1;
   position: relative;
 }
-#particles-js{
+.particles-main{
   position: absolute;
   background-color: rgba(0, 0, 0, 0); /* Color de fondo */
    width: 100%;
@@ -484,4 +484,13 @@ header{
   left: 0px;
   z-index: 0;
    /* Asegura que esté detrás de otros elementos */
+}
+.particles-character{
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0); /* Color de fondo */
+   width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
 }
