--- a/css/style.css
+++ b/css/style.css
@@ -268,12 +268,10 @@ ol li:hover {
 
 /* Characters Section */
 section.characters {
- 
   display: grid;
   grid-template-columns: repeat(3,1fr);
   gap: 15px;
-  
-  color: white;
+    color: white;
  
   }
   .character-link {
@@ -287,12 +285,20 @@ section.characters {
   }
 
   .character-img{
-    width: 100%;
+    /* width: 100%; */
+    padding-top: 10px;
   }
 
 
   section.characters div.character{
-    background-color: rgb(79, 79, 79);
+    background-image: url(../assets/image/paper.webp);
+    background-size: cover;
+    
+    background-position: center;
+    background-repeat: no-repeat;
+
+
+    /* background-color: rgb(79, 79, 79); */
   border-radius: 10px;
   padding: 10px;
   display: flex;
@@ -341,12 +347,15 @@ border: 1px solid white;
     display: flex;
     flex-direction: column;
     align-items: baseline;
+    font-size: 40px;
   }
 
   
 
   section.characters div.character div.character-title h2{
     font-size: 40px;
+    margin: 0px;
+    color: var(--text-dark);
   }
   section.characters div.character div.character-title h3{
     font-size: 25px;
@@ -354,13 +363,14 @@ border: 1px solid white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: left;
     display: inline;
-    color: aqua;
+    color: rgb(188, 71, 17);
 
   }
   section.characters  p {
       display: inline;
       font-size: 20px;
       margin-left: 10px;
+      color: var(--text-dark);
     }
 
 /* Search Section */
